--- a/frontend/groupomania/src/styles/Banner.css
+++ b/frontend/groupomania/src/styles/Banner.css
@@ -1,14 +1,16 @@
 .grp-banner {
+    margin-top: -70px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     color: black;
-    text-align: right;
-    border-bottom: solid 3px black;
-    padding-right: 100px;
+    padding-right: 50px;
+    padding-left: 15px;
+    
 }
 .grp-logo{
     width: 300px;
-    height: 250px;
+    height: 300px;
     text-align: left;
+    
 }
