--- a/frontend/groupomania/src/styles/PostList.css
+++ b/frontend/groupomania/src/styles/PostList.css
@@ -1,25 +1,57 @@
 .grp-post{
     display: flex;
     flex-direction:column;
-    margin-left: 2%;
+    margin-left: 10%;
     margin-right: 2%;
 }
 .grp-post-image{
     width: 20%;
     height: 150px;
-    border: solid black 2px;
     margin-top: 6%;
 }
 .grp-post-block{
-    flex-direction: row;
+    display: flex;
+    flex-direction: column;
     
 }
 .grp-post-text-area{
-    border: solid black 2px;
     width: 70%;
     height: 150px;
     margin-top: 6%;
     resize: none;
     background-color: #f8f8f8;
 
+}
+.grp-btn-like{
+    border: none;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    box-shadow: inset 0px 0px 2px;
+    background-color: #FD2D01;
+}
+.grp-btn-dislike{
+    border: none;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    box-shadow: inset 0px 0px 2px;
+    background-color: #FD2D01;
+}
+.grp-btn-custom{
+    border: none;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    box-shadow: inset 0px 0px 2px;
+    background-color: #FD2D01;
+}
+.grp-post-block-1{
+    display: flex;
+    text-align:left;
+    width: 100%;
+    height: 200px;
+}
+
+.grp-post-block-2{
+    
+    text-align:left;
+    
 }
