--- a/frontend/groupomania/src/styles/Body.scss
+++ b/frontend/groupomania/src/styles/Body.scss
@@ -30,6 +30,18 @@
         &-btn{
             display: flex;
             margin-left: 10%;
+            &-file{
+                margin-right: 2%;
+                padding: 10px;
+                border: none;
+                border-bottom-left-radius: 4px;
+                border-bottom-right-radius: 4px;
+                box-shadow: inset 0px 0px 2px;
+                background-color: #FD2D01;
+                &-upload{
+                    display: none;
+                }
+            }
             &-post{
                 margin-right: 2%;
                 padding: 10px;
