--- a/frontend/groupomania/src/styles/PostList.scss
+++ b/frontend/groupomania/src/styles/PostList.scss
@@ -1,52 +1,71 @@
+@mixin btnStyle {
+    border: none;
+                border-bottom-left-radius: 4px;
+                border-bottom-right-radius: 4px;
+                box-shadow: inset 0px 0px 2px;
+                background-color: #FD2D01;
+}
+
+.container{
+    
+    display: flex;
+    flex-direction:column-reverse
+}
 .grp-post{
     display: flex;
     flex-direction:column;
     margin-left: 10%;
     margin-right: 2%;
     &-block{
-        display: flex;
-        flex-direction: column;
+        height: 250px;
         &-1{
             display: flex;
             text-align:left;
             width: 100%;
-            height: 200px;
+            padding-left: 5%;
             &-image{
                 width: 20%;
                 height: 150px;
                 margin-top: 6%;
             }
             &-text-area{
+                margin-left: 1%;
+                padding-left: 1%;
                 width: 70%;
                 height: 150px;
                 margin-top: 6%;
                 resize: none;
                 background-color: #f8f8f8;
+                box-shadow: inset 0px 0px 5px rgb(122, 122, 122);
             
             }
         }
         &-2{
-            text-align:left;
+            display: flex;
+            justify-content: space-between;
+            &-btn-block-1{
+                text-align: left;
+                padding-left: 5%;
+                width: 300px;
+            }
             &-btn-like{
-                border: none;
-                border-bottom-left-radius: 4px;
-                border-bottom-right-radius: 4px;
-                box-shadow: inset 0px 0px 2px;
-                background-color: #FD2D01;
+                @include btnStyle();
             }
             &-btn-dislike{
-                border: none;
-                border-bottom-left-radius: 4px;
-                border-bottom-right-radius: 4px;
-                box-shadow: inset 0px 0px 2px;
-                background-color: #FD2D01;
+                @include btnStyle();
+                margin-left: 5% ;
+            }
+            &-btn-block-2{
+                padding-right: 5%;
+                width: 300px;
+                text-align: right;
             }
             &-btn-custom{
-                border: none;
-                border-bottom-left-radius: 4px;
-                border-bottom-right-radius: 4px;
-                box-shadow: inset 0px 0px 2px;
-                background-color: #FD2D01;
+                @include btnStyle();
+                margin-right: 5% ;
+            }
+            &-btn-delete{
+                @include btnStyle();
             }
         }
         
