--- a/frontend/groupomania/src/styles/PostList.scss
+++ b/frontend/groupomania/src/styles/PostList.scss
@@ -1,9 +1,9 @@
 @mixin btnStyle {
     border: none;
-                border-bottom-left-radius: 4px;
-                border-bottom-right-radius: 4px;
+                border-radius: 20px;
                 box-shadow: inset 0px 0px 2px;
                 background-color: #FD2D01;
+                padding: 10px;
 }
 
 .container{
@@ -50,10 +50,20 @@
             }
             &-btn-like{
                 @include btnStyle();
+                &-icon{
+                    margin-right: 5px;
+                    color: rgb(46, 46, 46) ;
+                }
             }
             &-btn-dislike{
                 @include btnStyle();
                 margin-left: 5% ;
+                &-icon{
+                    margin-right: 5px;
+                    color: rgb(46, 46, 46) ;
+                    
+                }
+               
             }
             &-btn-block-2{
                 padding-right: 5%;
