--- a/frontend/groupomania/src/styles/PostList.scss
+++ b/frontend/groupomania/src/styles/PostList.scss
@@ -48,7 +48,7 @@
                 padding-left: 5%;
                 width: 300px;
             }
-            &-btn-like{
+            &-btn-like-liked{
                 @include btnStyle();
                 &-icon{
                     margin-right: 5px;
