--- a/frontend/groupomania/src/styles/PostList.scss
+++ b/frontend/groupomania/src/styles/PostList.scss
@@ -53,6 +53,7 @@
                     @include btnStyle();
                     &-icon{
                         margin-right: 5px;
+                        margin-left: 5px;
                     }
                 }
                 &-liked{
