--- a/frontend/groupomania/src/styles/Body.scss
+++ b/frontend/groupomania/src/styles/Body.scss
@@ -12,6 +12,16 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
+            &-preview{
+                img{
+                    max-height: 100%;
+                    max-width: 100%;
+                }
+                max-height: 500px;
+                max-width:90%;
+                margin-left: auto;
+                margin-right: auto;
+            }
             &-text{
                 width: 80%;
                 height: 150px;
@@ -32,10 +42,10 @@
             margin-left: 10%;
             &-file{
                 margin-right: 2%;
-                padding: 10px;
+                margin-top: 10px;
+                padding:10px ;
                 border: none;
-                border-bottom-left-radius: 4px;
-                border-bottom-right-radius: 4px;
+                border-radius: 20px;
                 box-shadow: inset 0px 0px 2px;
                 background-color: #FD2D01;
                 &-upload{
@@ -44,10 +54,10 @@
             }
             &-post{
                 margin-right: 2%;
-                padding: 10px;
+                margin-top: 10px;
+                padding:10px ;
                 border: none;
-                border-bottom-left-radius: 4px;
-                border-bottom-right-radius: 4px;
+                border-radius: 20px;
                 box-shadow: inset 0px 0px 2px;
                 background-color: #FD2D01;
             }
