--- a/frontend/groupomania/src/styles/Modify.scss
+++ b/frontend/groupomania/src/styles/Modify.scss
@@ -3,13 +3,23 @@
     flex-direction: column;
     justify-content: center;
     &-img{
-        width: 500px;
-        height: 500px;
+        max-width: 70%;
+        max-height: 400px;
         display: block;
         margin-left: auto;
         margin-right: auto; 
     }
-    &-btn{
+    &-btn-modify{
+        margin-top: 10px;
+        padding:10px ;
+        border: none;
+        border-radius: 20px;
+        box-shadow: inset 0px 0px 2px;
+        background-color: #FD2D01;
+        margin-left: 40%;
+        width: 20%;
+    }
+    &-file-btn{
         width: 150px;
         margin-left: auto;
         margin-right: auto;
@@ -28,8 +38,7 @@
         margin-top: 15px; 
         padding: 10px;
         border: none;
-        border-bottom-left-radius: 4px;
-        border-bottom-right-radius: 4px;
+        border-radius: 20px;
         box-shadow: inset 0px 0px 2px;
         background-color: #FD2D01;
         &-modify-btn{
@@ -44,7 +53,7 @@ textarea{
     margin-right: auto; 
     margin-top:20px ;
     padding: 20px;
-    width: 600px;
+    width: 80%;
     height: 200px;
     box-sizing: border-box;
     border-radius: 4px;
