--- a/frontend/groupomania/src/styles/Body.scss
+++ b/frontend/groupomania/src/styles/Body.scss
@@ -14,7 +14,7 @@
             justify-content: center;
             &-preview{
                 img{
-                    max-height: 100%;
+                    max-height: 500px;
                     max-width: 100%;
                 }
                 max-height: 500px;
