--- a/frontend/groupomania/src/styles/Modify.scss
+++ b/frontend/groupomania/src/styles/Modify.scss
@@ -10,6 +10,10 @@
         margin-right: auto; 
     }
     &-btn-modify{
+        &-link{
+            text-decoration:none;
+            color: black;
+        }
         margin-top: 10px;
         padding:10px ;
         border: none;
