--- a/frontend/groupomania/src/styles/Banner.scss
+++ b/frontend/groupomania/src/styles/Banner.scss
@@ -1,3 +1,5 @@
+@import '../styles/variable-mixin.scss';
+
 .grp-banner {
     display: flex;
     justify-content: space-between;
@@ -15,7 +17,7 @@
             border-bottom-left-radius: 4px;
             border-bottom-right-radius: 4px;
             box-shadow: inset 0px 0px 2px;
-            background-color: #FD2D01;
+            background-color: $primary-color;
         }
     }
     
