--- a/frontend/groupomania/src/styles/Modify.scss
+++ b/frontend/groupomania/src/styles/Modify.scss
@@ -1,3 +1,4 @@
+@import '../styles/variable-mixin.scss';
 .grp-body{
     display: flex;
     flex-direction: column;
@@ -19,7 +20,7 @@
         border: none;
         border-radius: 20px;
         box-shadow: inset 0px 0px 2px;
-        background-color: #FD2D01;
+        background-color:$primary-color;
         margin-left: 40%;
         width: 20%;
     }
@@ -33,7 +34,7 @@
         border-bottom-left-radius: 4px;
         border-bottom-right-radius: 4px;
         box-shadow: inset 0px 0px 2px;
-        background-color: #FD2D01;
+        background-color: $primary-color;
     }
     &-file{
         width: 150px;
@@ -44,7 +45,7 @@
         border: none;
         border-radius: 20px;
         box-shadow: inset 0px 0px 2px;
-        background-color: #FD2D01;
+        background-color: $primary-color;
         &-modify-btn{
             display: none;
             
@@ -62,7 +63,7 @@ textarea{
     box-sizing: border-box;
     border-radius: 4px;
     border-bottom-left-radius: 0px;
-    background-color: #f8f8f8;
+    background-color: $tertiary-color;
     resize: none;
     border: none;
     box-shadow: inset 0px 0px 2px;
