--- a/frontend/groupomania/src/styles/Modify.scss
+++ b/frontend/groupomania/src/styles/Modify.scss
@@ -9,11 +9,14 @@
         display: block;
         margin-left: auto;
         margin-right: auto; 
+        margin-top: 5px;
     }
     &-btn-modify{
-        &-link{
-            text-decoration:none;
-            color: black;
+        @media (max-width : 760px) {
+            width: 150px;
+            margin-left: auto;
+            margin-right: auto;
+            margin-bottom: 5px;
         }
         margin-top: 10px;
         padding:10px ;
@@ -23,6 +26,10 @@
         background-color:$primary-color;
         margin-left: 40%;
         width: 20%;
+        &-link{
+            text-decoration:none;
+            color: black;
+        }
     }
     &-file-btn{
         width: 150px;
@@ -37,6 +44,7 @@
         background-color: $primary-color;
     }
     &-file{
+        
         width: 150px;
         margin-left: auto;
         margin-right: auto;
@@ -47,6 +55,7 @@
         box-shadow: inset 0px 0px 2px;
         background-color: $primary-color;
         &-modify-btn{
+            
             display: none;
             
         }
