--- a/frontend/groupomania/src/styles/PostList.scss
+++ b/frontend/groupomania/src/styles/PostList.scss
@@ -12,6 +12,14 @@
     margin-right: 2%;
     &-block{
         height: 250px;
+        &-title{
+            margin: 0px;
+            margin-top: 10px;
+            margin-left: 10px;
+            margin-bottom: -5px;
+            text-align: left;
+            font-size: 16px;
+        }
         &-1{
             display: flex;
             text-align:left;
@@ -69,9 +77,14 @@
                 
             }
             &-btn-block-2{
+                &false{
+                    display: none;
+                }
+                &true{
                 padding-right: 5%;
                 width: 300px;
                 text-align: right;
+                }
             }
             &-btn-custom{
                 @media(max-width:760px) {
