--- a/frontend/groupomania/src/styles/PostList.scss
+++ b/frontend/groupomania/src/styles/PostList.scss
@@ -11,7 +11,7 @@
     margin-left: 10%;
     margin-right: 2%;
     &-block{
-        height: 250px;
+        height: 10%;
         &-title{
             margin: 0px;
             margin-top: 10px;
